akhikachmoney-deploy-secret.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-akhikachmoney
  labels:
    app: web-akhikachmoney
spec:
  replicas: 1
  selector:
    matchLabels:
      name: web-akhikachmoney
  template:
    metadata:
      labels:
        name: web-akhikachmoney
    spec:
      containers:
        - name: web-akhikachmoney
          image: akhibousokhona1/akhikachmoney:v1.2
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
