akhikachmoney-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-akhikachoney
  labels:
    app: web-akhikachoney
spec:
  replicas: 1
  selector:
    matchLabels:
      name: web-akhikachoney
  template:
    metadata:
      labels:
        name: web-akhikachoney
    spec:
      containers:
        - name: web-akhikachoney
          image: akhibousokhona1/akhikachmoney:v13
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
