akhikachmoney-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-akhikachmoney
  labels:
    app: web-akhikachmoney
spec:
  type: NodePort
  ports:
    - port: 80 #port that the service exposes
      targetPort: 8000 #port that the app is receiving requests from via the pod
      nodePort: 30003
  selector:
    name: web-akhikachmoney
